--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
   </div>
 
-    <!-- Navbar -->
+     <!-- Navbar -->
     <nav id="nav">
         <!-- Logo, Search bar -->
         <div class="navTop">
@@ -40,13 +40,11 @@
                 <img src="./img/K3CollectiveLogo.png" alt="K3 Collection Logo">
             </div>
             <div class="navItem">
-                <div class="search">
-                    <input type="text" class="searchInput" placeholder="I am looking for a...">
-                    <img src="./img/search.png" width="20px" height="20px" alt="magnifying glass" class="searchIcon">
-                </div>
+                
             </div>
             <div class="navItem">
-                <span class="limitedOffer">Limited Offer!</span>
+<a href="#product">    
+                <span class="limitedOffer">Limited Offer!</span></a>
             </div>
 
         </div>
@@ -63,7 +61,7 @@
 
     <!-- Slider -->
     <div class="slider">
-        <div class="sliderWrapper">
+        <div class="sliderWrapper" style="transform: translateX(-200vw);">
             <div class="sliderItem">
                 <img src="./img/air.png" alt="Nike Air Force" class="sliderImage">
                 <div class="sliderBgCircle"></div>
@@ -132,11 +130,13 @@
     </div>
 
     <!-- Products -->
-    <div class="product" id="product">
-        <img src="./img/air.png" alt="" class="productImage">
+    
+<div class="product" id="product">
+    <nav id="#product">
+        <img src="./img/blazer.png" alt="" class="productImage">
         <div class="productDetails">
-            <h1 class="productTitle">AIR FORCE</h1>
-            <h2 class="productPrice">₱11,510.16</h2>
+            <h1 class="productTitle">BLAZER</h1>
+            <h2 class="productPrice">₱7461.36</h2>
             <p class="productDescription">K3 Collective (Kenny, Klyde, and Kurt) is a thriving company based in the Philippines,
                  and they’re set to establish a major business in OC Parañaque. 
                  With their proven success, how could anyone say no to partnering with them?</p>
