--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
             </div>
             <button class="productButton">BUY NOW</button>
         </div>
+    </nav>
         <!-- Payment -->
         <div class="payment">
             <h1 class="payTitle">Personal Information</h1>
