--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
                 <div class="size">43</div>
                 <div class="size">44</div>
             </div>
-            <button class="productButton">BUY NOW</button>
+            <button class="productButton" onclick="window.location.href='shoe1.html'">BUY NOW</button>
+
         </div>
     </nav>
         <!-- Payment -->
